# gRPC_logger

./: .gitignore  .gitmodules  CmakeLists.txt  README.md
.github/workflows/: test.yml
client/: main.cpp
liblogger/: CMakeLists.txt  RingBuffer.h  RingBuffer.tpp  log.h  logger.cpp  logger.h  logger.tpp  ring_buffer.h  ring_buffer.tpp  shared_queue.h  utils.h  worker_pool.h
libproto/: CMakeLists.txt
proto/: logs.proto
server/: main.cpp
tests/: .gitignore  CMakeLists.txt  lib_logger.cpp  queue_test.cpp  ringbuffer_test.cpp
tests/toy-queue/: queue.c  queue.h
